<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insert_name"
                android:textColor="#000000"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/et_name"
                android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_name"
                android:hint="@string/write_here"/>

            <TextView
                android:id="@+id/tv_apellidos"
                android:layout_below="@id/et_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insert_apellidos"
                android:textColor="#000000"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/et_apellidos"
                android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_apellidos"
                android:hint="@string/write_here"/>

            <TextView
                android:id="@+id/tv_fecha_inicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_apellidos"
                android:text="@string/fecha_inicio"
                android:textColor="#000000"
                android:layout_marginTop="10dp"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/et_fecha_inicio"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:hint="dd mm yyyy"
                android:textAlignment="center"
                android:layout_alignParentRight="true"
                android:layout_below="@id/et_apellidos"/>

            <TextView
                android:id="@+id/tv_fecha_fin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_fecha_inicio"
                android:text="@string/fecha_fin"
                android:textColor="#000000"
                android:layout_marginTop="10dp"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/et_fecha_fin"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:hint="dd mm yyyy"
                android:textAlignment="center"
                android:layout_alignParentRight="true"
                android:layout_below="@id/tv_fecha_inicio"/>

            <CheckBox
                android:id="@+id/cb_mayor_de_edad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mayor_de_edad"
                android:layout_below="@id/tv_fecha_fin"/>

            <RadioGroup
                android:id="@+id/rg_nacionalidad"
                android:layout_below="@id/cb_mayor_de_edad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <RadioButton
                    android:id="@+id/rb_espanol"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/espanol"/>
                <RadioButton
                    android:id="@+id/rb_ingles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ingles"/>
                <RadioButton
                    android:id="@+id/rb_frances"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/frances"/>
                <RadioButton
                    android:id="@+id/rb_aleman"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aleman"/>
            </RadioGroup>

            <TextView
                android:id="@+id/tv_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rg_nacionalidad"
                android:text="@string/chose_language"
                android:textColor="#000000"
                android:layout_marginTop="10dp"
                android:textSize="20dp" />

            <Spinner
                android:id="@+id/s_estudios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_spinner"
                android:layout_marginTop="5dp"/>

            <Button
                android:id="@+id/bt_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/s_estudios"
                android:layout_marginTop="5dp"
                android:text="@string/accept"
                android:onClick="aceptar"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/tv_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_below="@id/bt_accept"
                android:textColor="#000000"
                android:textSize="10dp" />

        </RelativeLayout>

    </ScrollView>

</LinearLayout>